# psevdo_inst

./: app.py  pyproject.toml
